separate routes and controllers and add Owner model, routes, controllers

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 #.env
 JWT_KEY=fullstack65
-DB = <your-mongo-db-cluster-connection-string>
+DB = mongodb+srv://MariaSC:socama6874@clustermongohorse-zq2h1.mongodb.net/test?retryWrites=true&w=majority
