--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 #.env
-JWT_KEY=fullstack65
-DB = mongodb+srv://MariaSC:socama6874@clustermongohorse-zq2h1.mongodb.net/test?retryWrites=true&w=majority
+JWT_KEY = <YOUR-JWT-KEY>
+DB = <YOUR-MONGO-DB-PASSWORD>
